--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ app/assets/stylesheets/theme/styles
 app/assets/images/theme/logo
 app/assets/images/theme/icons
 app/views/root/_homepage_content.haml
+config/formatted_slc_clients.csv
