removed leases csv

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ app/views/root/_homepage_content.haml
 config/formatted_slc_clients.csv
 config/formatted_slc_owners.csv
 config/formatted_slc_leases.csv
+config/formatted_slc_leases.csv
